@@ -1,0 +1,36 @@
+<?xml version="1.0"?>
+<?xml-stylesheet href="../releases.xsl" type="text/xsl"?>
+<release>
+  <module>gst-python</module>
+  <module-fancy>GStreamer Python</module-fancy>
+  <name>64 bit is enough for everyone</name>
+  <version>0.8.4</version>
+
+  <intro>
+<p>
+This is the 0.8.4 release of the GStreamer Python bindings.
+It should be used with the 0.8.x series of GStreamer and GStreamer Plug-ins.
+</p>
+<p>
+This is the fifth stable 0.8.0 gst-python release, it's now considered
+stable and ready to be used in production. It's already being used by
+several applications.
+</p>
+  </intro>
+  <features>
+    <feature>fix installation on 64-bit machines</feature>
+    <feature>memleak fixes</feature>
+  </features>
+          <contributors>
+	<person>Thomas Vander Stichele</person>
+  </contributors>
+
+  <maintainers>
+    <person>Edward Hervey</person>
+  </maintainers>
+
+<!--
+  <bugs>
+  </bugs>
+-->
+</release>
