@@ -1,6 +1,6 @@
-releases = 0.10.2 0.10.1 0.8.3 0.10.0 0.9.7 0.9.6 0.9.5 \
+releases = 0.10.2 0.10.1 0.10.0 0.9.7 0.9.6 0.9.5 \
 	0.7.90 0.7.91 0.7.92 0.7.93 0.7.94 \
-	0.8.0 0.8.1 0.8.2 \
+	0.8.0 0.8.1 0.8.2 0.8.3 0.8.4 \
 	0.9.3 0.9.4
 
 built_pages = \
